--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker
-            .register("./serviceworker.js")
+            .register("./serviceworker.ts")
             .then((reg) => console.log("Success: ", reg.scope))
             .catch((err) => console.log("Failed: ", err));
         });
